--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,25 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Helvetica, sans-serif";
+}
+
+header{
+    background-color: lightgreen;
+    height: 80px;
+    width: 100%;
+}
+
+main{
+    background-color: lightpink;
+    padding: 30px;
+}
+
+main h1{
+    font-size: 80px;
+}
+
+footer{
+    height: 45px;
+    background-color: lightblue;
 }
