--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: "Helvetica, sans-serif";
+    font-family: "Helvetica";
 }
 
 header{
@@ -13,6 +13,7 @@ header{
 main{
     background-color: lightpink;
     padding: 30px;
+    height: 500px;
 }
 
 main h1{
